projects/vb6parse/snapshots/parsers/cst/invalid_syntax/missing_end/missing_end_if_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/missing_end.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
[]
